:sparkles: Feature contact form

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,23 @@
           <span class="visually-hidden">Next</span>
         </a>
       </div>
+      <div class="form-container col-8 align-items-center row justify-content-center">
+        <form>
+          <div class="mb-3">
+            <label for="inputName1" class="form-label">Name:</label>
+            <input type="text" class="form-control" id="inputName1">
+          </div>
+          <div class="mb-3">
+            <label for="inputEmail1" class="form-label">Email:</label>
+            <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+          </div>
+          <div class="mb-3">
+            <label for="inputMessage1" class="form-label">Message:</label>
+            <input type="text" class="form-control" id="inputMessage1">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
 
 
 
