--- a/pastEvents.html
+++ b/pastEvents.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
 
-    <div id="carouselExample" class="carousel slide">
+    <div id="carousel" class="carousel slide border-dark">
         <div class="carousel-inner">
           <div class="carousel-item active justify-content-center">
             <a href="./pastEvents.html" class="d-flex h-100 align-items-center justify-content-center">Past Events</a>
@@ -85,7 +85,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
@@ -97,7 +97,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
@@ -109,7 +109,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
@@ -121,7 +121,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
