--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -84,7 +84,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
@@ -96,7 +96,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
@@ -108,7 +108,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
@@ -120,7 +120,7 @@
             <p class="card-text">Texto Descriptivo</p>
             <div class="card-price justify-content-between">
               <p>Price $0000</p>
-              <a href="#" class="btn btn-primary">Ver mas...</a>
+              <a href="./details.html" class="btn btn-primary">Ver mas...</a>
             </div>
           </div>
         </div>  
