--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="./details.html">
-          <img src="./multimedia/Logo Amazing Events.png" alt="" height="50" />
+          <img src="./multimedia/logoAEvents.png" alt="" height="50" />
         </a>
         <button
           class="navbar-toggler"
