--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
     </div>
 
     <div
-      class="card-container d-flex index-card justify-content-around container-s"
+      class="card-container d-flex index-card justify-content-around container-s" id="cards-container"
     >
       <div class="card">
         <img
           src="./multimedia/books.jpg"
-          class="card-img-top"
+          class="card-img-top "
           alt="..."
-          height="200"
+          height="180"
         />
 
         <div class="card-body">
@@ -273,5 +273,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="scripts/main-index.js"></script>
   </body>
 </html>
