--- a/details.html
+++ b/details.html
@@ -29,14 +29,14 @@
           </div>
         </div>
     </nav>
-    <div class="p-5 detail-card-container justify-content-center">
+    <div class="p-5 detail-card-container justify-content-center d-flex">
         <div class="p-3 container-fluid col-6 border-dark around-detail-card">
             <div class="d-flex detail-card  justify-content-center container-fluid">
-                  <div class="card border-dark p-2 col-6">
-                  <img src="./multimedia/books.jpg" class="card-img-top" alt="..." height="250" >
+                  <div class="card border-dark p-2 col-6 d-flex">
+                  <img src="./multimedia/books.jpg" class="card-img-top d-flex" alt="..." height="250" >
                   </div>
                   <div class="p-2"></div>
-                  <div class="card justify-content-center border-dark p-2 col-6">
+                  <div class="card justify-content-center border-dark p-2 col-6 d-flex">
                       <h2 class="p-1">Titulo</h2>
                       <h4 class="p-1">Texto Descriptivo</h3>
                       <h4 class="p-1">Texto Descriptivo</h3>
