:sparkles: feature past and upcoming events are dynamic, also check filters and search bar are working

--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -45,37 +45,17 @@
       </div>
 
       <div class="index-checkbox d-flex justify-content-around container-sm">
-        <ul class="list-group  list-group-horizontal justify-content-between">
-          <li class="list-group-item">
-            <input class="form-check-input me-1 " type="checkbox" value="" id="firstCheckbox">
-            <label class="form-check-label" for="firstCheckbox">Category</label>
-          </li>
-          <li class="list-group-item">
-            <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-            <label class="form-check-label" for="secondCheckbox">Category</label>
-          </li>
-          <li class="list-group-item">
-            <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-            <label class="form-check-label" for="thirdCheckbox">Category</label>
-          </li>
-          <li class="list-group-item">
-            <input class="form-check-input me-1" type="checkbox" value="" id="fourthCheckbox">
-            <label class="form-check-label" for="thirdCheckbox">Category</label>
-          </li>
-          <li class="list-group-item">
-            <input class="form-check-input me-2" type="checkbox" value="" id="fifthCheckbox">
-            <label class="form-check-label" for="thirdCheckbox">Category</label>
-          </li>
+        <ul class="list-group  list-group-horizontal justify-content-between" id="checkbox-container">
         </ul>
             <form class="d-flex index-search-form" role="search">
-              <input class="form-control me-2" type="search"  aria-label="Search">
+              <input class="form-control me-2" type="search"  aria-label="Search" name="textInput">
               <button class="btn btn-outline-success" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
               </svg></button>
             </form>
       </div>
   
-      <div class="card-container d-flex index-card justify-content-around container-s " id="cards-container">
+      <div class="card-container d-flex index-card justify-content-around container-s " id="cardsContainer">
        
       </div>
       <footer class="container-fluid d-flex bg-secondary">
