--- a/details.html
+++ b/details.html
@@ -31,16 +31,9 @@
     </nav>
     <div class="p-5 detail-card-container justify-content-center d-flex">
         <div class="p-3 container-fluid col-6 border-dark around-detail-card">
-            <div class="d-flex detail-card  justify-content-center container-fluid">
-                  <div class="card border-dark p-2 col-6 d-flex">
-                  <img src="./multimedia/books.jpg" class="card-img-top d-flex" alt="..." height="250" >
-                  </div>
-                  <div class="p-2"></div>
-                  <div class="card justify-content-center border-dark p-2 col-6 d-flex">
-                      <h2 class="p-1">Titulo</h2>
-                      <h4 class="p-1">Texto Descriptivo</h3>
-                      <h4 class="p-1">Texto Descriptivo</h3>
-                      <h4 class="p-1">Texto Descriptivo</h3>
+            <div class="d-flex detail-card  justify-content-center container-fluid" id ="contenedorTarjeta">
+                  <div class="card border-dark p-2 col-6 d-flex" >
+                  
                   </div>
             </div>
         </div>
@@ -70,6 +63,7 @@
         </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <script src="./scripts/main-details.js"></script>
     </body>
   </html> 
 
