--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/main-index.js"></script>
+    <!-- <script src="scripts/main-index.js"></script> -->
+    <script src="scripts/scripts.js"></script>
   </body>
 </html>
