--- a/stats.html
+++ b/stats.html
@@ -44,17 +44,17 @@
           <span class="visually-hidden">Next</span>
         </a>
       </div>
-      <div class="table-container">
-        <table class="table table-bordered border-dark stats-table">
+      <div class="table-container" >
+        <table class="table table-bordered border-dark stats-table" id="table-stats">
           <thead>
             <tr>
               <th scope="row" colspan="3" class="bg-dark-subtle">Events Statistics</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Events with the highest percentage of attendance</td>
-              <td>Events with the lowest percentage of attendance</td>
+            <!-- <tr>
+              <td>Event with the highest percentage of attendance</td>
+              <td>Event with the lowest percentage of attendance</td>
               <td>Event with larger capacity</td>
             </tr>
             <tr>
@@ -118,7 +118,7 @@
               <td></td>
               <td></td>
             </tr>
-  
+   -->
           </tbody>
         </table>
       </div>
@@ -145,5 +145,6 @@
         </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <script src="./scripts/main-stats.js"></script>
     </body>
   </html> 
